fixed weird calendar viewing bug on iphone

--- a/css/jrabbit.css
+++ b/css/jrabbit.css
@@ -27,3 +27,9 @@ body {
     height: 60px; 
     width: 60px; 
 }
+
+@media (max-width:400px) {
+    #timetable {
+        width: 280px;
+    }
+}
